Gantt Chart + descrição, introdução com um pequeno resumo de cada capitulo,

--- a/2-MainMatter/chapter1.tex
+++ b/2-MainMatter/chapter1.tex
@@ -86,4 +86,16 @@ A proposta assenta nos seguintes componentes principais:
 
 Em conjunto, estes componentes constituem uma solução prática e extensível, preparada para apoiar revisores humanos e tornar o processo de \gls{CR} mais eficiente, consistente e alinhado com as necessidades reais da empresa.
 
+\section{Estrutura da Dissertação}
+
+O presente documento encontra-se organizado em vários capítulos, que refletem a evolução do trabalho desde o enquadramento teórico até à definição da solução proposta.
+
+O Capítulo 2 apresenta o enquadramento conceptual do processo de revisão de código no contexto do desenvolvimento de software, abordando as suas práticas, objetivos e desafios em ambientes empresariais. São igualmente discutidas as limitações das abordagens tradicionais de revisão e a motivação para a introdução de mecanismos de apoio baseados em inteligência artificial.
+
+O Capítulo 3 analisa as principais tecnologias relevantes para a implementação de sistemas de apoio à revisão de código. São abordadas as plataformas de controlo de versões, as ferramentas tradicionais de análise automática e as soluções baseadas em modelos de linguagem de grande escala (LLMs), bem como as tecnologias associadas à extração, processamento e integração de alterações de código.
+
+O Capítulo 4 apresenta a solução proposta para a integração de inteligência artificial no processo de revisão de código da Processware. Neste capítulo é descrita a abordagem adotada, os requisitos funcionais e não funcionais, a arquitetura geral do sistema e o desenho detalhado dos seus principais componentes, com especial enfoque na integração com os processos internos da organização.
+
+Por fim, os capítulos seguintes (a desenvolver na dissertação final) serão dedicados à implementação da solução proposta, à sua avaliação em contexto real e à análise crítica dos resultados obtidos.
+
 No próximo capítulo serão apresentadas as várias tecnologias a serem utilizadas para o desenvolvimento deste projeto, bem como a análise de trabalhos que sejam considerados relevantes para o enquadramento deste tema de dissertação.
