Adjustments in references

--- a/2-MainMatter/chapter2.tex
+++ b/2-MainMatter/chapter2.tex
@@ -68,12 +68,12 @@ A aplicação de \glspl{LLM} à automação da revisão de código é uma área 
 
 \begin{itemize}
     \item \textbf{Geração de Descrições e Sumários:} Automatizar a criação de descrições concisas para \glspl{PR}, resumindo as alterações realizadas, o que ajuda os revisores a compreender rapidamente o contexto~\cite{codeagent2024}.
-    \item \textbf{Deteção de Defeitos e \textit{Code Smells}:} Identificar potenciais \textit{bugs}, vulnerabilidades de segurança, más práticas de desempenho ou violações de princípios de design (como SOLID) com base no contexto aprendido, superando em alguns casos a precisão de analisadores estáticos tradicionais para certos tipos de problemas~\cite{liang2024automation, rahman2024empirical}.
+    \item \textbf{Deteção de Defeitos e \textit{Code Smells}:} Identificar potenciais \textit{bugs}, vulnerabilidades de segurança, más práticas de desempenho ou violações de princípios de design (como SOLID) com base no contexto aprendido, superando em alguns casos a precisão de analisadores estáticos tradicionais para certos tipos de problemas~\cite{liang2024automation}.
     \item \textbf{Geração de Comentários de Revisão:} Esta é a aplicação mais diretamente relacionada com o objetivo desta dissertação. Os \glspl{LLM} analisam o \gls{Diff} e geram comentários que podem variar desde sugestões de estilo (formatação, nomenclatura) até a questões de lógica, sugerindo implementações alternativas ou apontando casos extremos não tratados~\cite{airesults2024review, google2024autocommenter}.
     \item \textbf{Resposta a Comentários:} Alguns sistemas exploram a capacidade dos \glspl{LLM} de atuar como autores, respondendo automaticamente a comentários dos revisores, esclarecendo decisões ou comprometendo-se com correções~\cite{codeagent2024}.
 \end{itemize}
 
-\textbf{Estudos e Resultados Chave:} Trabalhos recentes demonstram o potencial desta abordagem. Por exemplo, estudos que utilizam modelos como o GPT-3.5/4 ou o CodeLLaMA mostraram que os comentários gerados podem ser considerados úteis por programadores numa percentagem significativa dos casos, por vezes equivalentes a comentários de revisores humanos para categorias específicas de problemas~\cite{liang2024automation, rahman2024empirical}. No entanto, a literatura também aponta desafios consistentes: a utilidade é altamente variável, há uma tendência para gerar falsos positivos ou sugestões genéricas, e os modelos podem ``alucinar'', sugerindo problemas inexistentes ou correções incorretas~\cite{liang2024automation, zhong2024evaluation}.
+\textbf{Estudos e Resultados Chave:} Trabalhos recentes demonstram o potencial desta abordagem. Por exemplo, estudos que utilizam modelos como o GPT-3.5/4 ou o CodeLLaMA mostraram que os comentários gerados podem ser considerados úteis por programadores numa percentagem significativa dos casos, por vezes equivalentes a comentários de revisores humanos para categorias específicas de problemas~\cite{liang2024automation}. No entanto, a literatura também aponta desafios consistentes: a utilidade é altamente variável, há uma tendência para gerar falsos positivos ou sugestões genéricas, e os modelos podem ``alucinar'', sugerindo problemas inexistentes ou correções incorretas~\cite{liang2024automation, jiang2023codereview}.
 
 A eficácia destes sistemas depende criticamente da formulação do \textit{prompt} (a instrução dada ao modelo), do contexto fornecido (o \gls{Diff}, mas também potencialmente ficheiros relevantes, descrição do \gls{PR}, etc.) e da existência de um mecanismo para guiar o modelo com o conhecimento específico da organização \-- uma lacuna que esta dissertação pretende colmatar.
 
@@ -83,10 +83,10 @@ Apesar do potencial demonstrado, a integração prática de \glspl{LLM} no proce
 
 \begin{enumerate}
     \item \textbf{Falta de Contexto Organizacional Específico:} \glspl{LLM} genéricos são treinados em código público e conhecimentos gerais. Não possuem conhecimento inerente sobre as \textbf{boas práticas internas}, convenções de \textit{codebase}, padrões de arquitetura específicos ou regras de negócio de uma empresa. Um comentário genericamente correto pode ser irrelevante ou mesmo contrário aos padrões internos da organização~\cite{google2024autocommenter, tufano2024slr}.
-    \item \textbf{Variabilidade e Inconsistência na Qualidade:} A utilidade dos comentários gerados pode flutuar amplamente. O modelo pode produzir uma análise perspicaz num caso e, no seguinte, gerar comentários vagos, incorretos ou focados em aspetos triviais, minando a confiança dos programadores~\cite{liang2024automation, rahman2024empirical}.
-    \item \textbf{Alucinações e Falsos Positivos:} \glspl{LLM} podem identificar ``problemas'' que não existem, sugerir correções sintaticamente inválidas ou semanticamente erradas, ou atribuir incorretamente a causa de um defeito. Esta falta de fiabilidade exige uma supervisão humana cuidadosa, podendo anular os ganhos de eficiência~\cite{zhong2024evaluation, nguyen2025comparison}.
+    \item \textbf{Variabilidade e Inconsistência na Qualidade:} A utilidade dos comentários gerados pode flutuar amplamente. O modelo pode produzir uma análise perspicaz num caso e, no seguinte, gerar comentários vagos, incorretos ou focados em aspetos triviais, minando a confiança dos programadores~\cite{liang2024automation}.
+    \item \textbf{Alucinações e Falsos Positivos:} \glspl{LLM} podem identificar ``problemas'' que não existem, sugerir correções sintaticamente inválidas ou semanticamente erradas, ou atribuir incorretamente a causa de um defeito. Esta falta de fiabilidade exige uma supervisão humana cuidadosa, podendo anular os ganhos de eficiência~\cite{jiang2023codereview}.
     \item \textbf{Custo e Latência:} A execução de \glspl{LLM} de grande porte para analisar cada \gls{PR} pode ter custos computacionais e financeiros não triviais, além de introduzir latência no processo, especialmente para \glspl{Diff} grandes ou análises complexas.
-    \item \textbf{Integração no Fluxo de Trabalho (\textit{Workflow}):} Incorporar uma ferramenta baseada em \glspl{LLM} de forma não intrusiva e que realmente agregue valor \-- em vez de gerar ruído \-- é um desafio de engenharia. A ferramenta deve complementar, e não substituir ou atrapalhar, o julgamento humano e a dinâmica colaborativa da revisão~\cite{autoreviewer2025fieldstudy}.
+    \item \textbf{Integração no Fluxo de Trabalho (\textit{Workflow}):} Incorporar uma ferramenta baseada em \glspl{LLM} de forma não intrusiva e que realmente agregue valor \-- em vez de gerar ruído \-- é um desafio de engenharia. A ferramenta deve complementar, e não substituir ou atrapalhar, o julgamento humano e a dinâmica colaborativa da revisão.
 \end{enumerate}
 
 Este conjunto de limitações define claramente o espaço para a contribuição proposta nesta dissertação. O problema central não é \textit{se} os \glspl{LLM} podem gerar comentários, mas \textbf{como fazê-lo de forma consistente, alinhada com o contexto específico da Processware, e suficientemente fiável para ser integrada no fluxo de desenvolvimento da empresa}. A solução proposta, ao focar-se na personalização com base nas boas práticas internas e na integração fluida, aborda diretamente as lacunas 1 e 5, enquanto os objetivos de avaliação (Objetivo 5) visam mitigar os riscos apontados nas lacunas 2, 3 e 4.
