--- a/4-Bibliography/bibliography_doi.bib
+++ b/4-Bibliography/bibliography_doi.bib
@@ -1,38 +1,30 @@
 @article{airesults2024review,
   title   = {AI-powered Code Review with LLMs: Early Results},
-  author  = {Zhang, L. and Others},
+  author  = {Zhang, L. and et al.},
   year    = {2024},
   journal = {arXiv},
   url     = {https://arxiv.org/abs/2404.18496}
 }
 
-@article{autoreviewer2025fieldstudy,
-  title   = {Rethinking Code Review Workflows with LLM Assistance},
-  author  = {Xie, Y. and Others},
-  year    = {2025},
-  journal = {arXiv},
-  url     = {https://arxiv.org/html/2505.16339v1}
-}
-
 @article{codeagent2024,
   title   = {CodeAgent: A Multi-Agent Framework for Automated Code Review},
-  author  = {Li, J. and Others},
+  author  = {Li, J. and et al.},
   year    = {2024},
   journal = {arXiv},
   url     = {https://arxiv.org/abs/2402.02172}
 }
 
-@article{google2024autocommenter,
+@misc{google2024autocommenter,
   title   = {AI-Assisted Assessment of Coding Practices in Industrial Code Review},
   author  = {Google Research},
   year    = {2024},
-  journal = {Google Publications},
+  howpublished = {Google Publications},
   url     = {https://research.google/pubs/ai-assisted-assessment-of-coding-practices-in-industrial-code-review/}
 }
 
 @article{liang2024automation,
   title   = {Code Review Automation: Strengths and Weaknesses},
-  author  = {Liang, D. and Others},
+  author  = {Liang, D. and et al.},
   year    = {2024},
   journal = {arXiv},
   url     = {https://arxiv.org/abs/2401.05136}
@@ -40,70 +32,46 @@
 
 @article{llmsurvey2023,
   title   = {Large Language Models for Software Engineering: A Survey},
-  author  = {Chen, X. and Others},
+  author  = {Chen, X. and et al.},
   year    = {2023},
   journal = {arXiv},
   url     = {https://arxiv.org/abs/2312.15223}
 }
 
-@article{nguyen2025comparison,
-  title   = {A Comparison of LLM-Assisted Development Tools},
-  author  = {Nguyen, T. and Others},
-  year    = {2025},
-  journal = {arXiv},
-  url     = {https://arxiv.org/abs/2501.00000}
-}
-
-@article{rahman2024empirical,
-  title   = {An Empirical Study of LLM-Based Automated Code Review},
-  author  = {Rahman, F. and Others},
-  year    = {2024},
-  journal = {arXiv},
-  url     = {https://arxiv.org/abs/2412.18531}
-}
-
 @article{tufano2024slr,
   title   = {Large Language Models in Software Engineering: A Systematic Literature Review},
-  author  = {Tufano, Michele and Others},
+  author  = {Tufano, Michele and et al.},
   year    = {2024},
-  journal = {ACM TOSEM},
+  journal = {ACM Transactions on Software Engineering and Methodology},
   url     = {https://nzjohng.github.io/publications/papers/tosem2024_5.pdf}
 }
 
-@article{zhong2024evaluation,
-  title   = {Evaluating AI-Assisted Code Review in Industry},
-  author  = {Zhong, Kai and Others},
-  year    = {2024},
-  journal = {arXiv},
-  url     = {https://arxiv.org/abs/2508.18771}
-}
-
-@article{bacchelli2013expectations,
-  title   = {Expectations, Outcomes, and Challenges of Modern Code Review},
-  author  = {Bacchelli, Alberto and Bird, Christian},
-  journal = {Proceedings of the 35th International Conference on Software Engineering (ICSE)},
-  year    = {2013},
-  pages   = {712--721},
+@inproceedings{bacchelli2013expectations,
+  title     = {Expectations, Outcomes, and Challenges of Modern Code Review},
+  author    = {Bacchelli, Alberto and Bird, Christian},
+  booktitle = {Proceedings of the 35th International Conference on Software Engineering (ICSE)},
+  year      = {2013},
+  pages     = {712--721},
   publisher = {IEEE}
 }
 
-@article{rigby2013convergent,
-  title   = {Convergent Contemporary Software Peer Review Practices},
-  author  = {Rigby, Peter C. and Bird, Christian},
-  journal = {Proceedings of the 9th Joint Meeting on Foundations of Software Engineering (ESEC/FSE)},
-  year    = {2013},
-  pages   = {202--212},
+@inproceedings{rigby2013convergent,
+  title     = {Convergent Contemporary Software Peer Review Practices},
+  author    = {Rigby, Peter C. and Bird, Christian},
+  booktitle = {Proceedings of the 9th Joint Meeting on Foundations of Software Engineering (ESEC/FSE)},
+  year      = {2013},
+  pages     = {202--212},
   publisher = {ACM}
 }
 
 @article{mcintosh2014empirical,
-  title   = {An Empirical Study of the Impact of Modern Code Review Practices on Software Quality},
-  author  = {McIntosh, Shane and Kamei, Yasutaka and Adams, Bram and Hassan, Ahmed E.},
-  journal = {Empirical Software Engineering},
-  year    = {2014},
-  volume  = {19},
-  number  = {6},
-  pages   = {1819--1850},
+  title     = {An Empirical Study of the Impact of Modern Code Review Practices on Software Quality},
+  author    = {McIntosh, Shane and Kamei, Yasutaka and Adams, Bram and Hassan, Ahmed E.},
+  journal   = {Empirical Software Engineering},
+  year      = {2014},
+  volume    = {19},
+  number    = {6},
+  pages     = {1819--1850},
   publisher = {Springer}
 }
 
@@ -117,62 +85,69 @@
   pages   = {182--211}
 }
 
-@article{johnson2013donotuse,
-  title   = {Why Don’t Software Developers Use Static Analysis Tools to Find Bugs?},
-  author  = {Johnson, Brittany and Song, Yoonki and Murphy-Hill, Emerson and Bowdidge, Robert},
-  journal = {Proceedings of the 35th International Conference on Software Engineering (ICSE)},
-  year    = {2013},
-  pages   = {672--681},
+@inproceedings{johnson2013donotuse,
+  title     = {Why Don’t Software Developers Use Static Analysis Tools to Find Bugs?},
+  author    = {Johnson, Brittany and Song, Yoonki and Murphy-Hill, Emerson and Bowdidge, Robert},
+  booktitle = {Proceedings of the 35th International Conference on Software Engineering (ICSE)},
+  year      = {2013},
+  pages     = {672--681},
   publisher = {IEEE}
 }
 
-@article{kim2016warnings,
-  title   = {Which Warnings Should I Fix First?},
-  author  = {Kim, Sunghun and Ernst, Michael D.},
-  journal = {Proceedings of the 6th Joint Meeting on Foundations of Software Engineering (FSE)},
-  year    = {2016},
-  pages   = {45--55},
+@inproceedings{kim2016warnings,
+  title     = {Which Warnings Should I Fix First?},
+  author    = {Kim, Sunghun and Ernst, Michael D.},
+  booktitle = {Proceedings of the 6th Joint Meeting on Foundations of Software Engineering (FSE)},
+  year      = {2016},
+  pages     = {45--55},
   publisher = {ACM}
 }
 
 @article{allamanis2018survey,
-  title   = {A Survey of Machine Learning for Big Code and Naturalness},
-  author  = {Allamanis, Miltiadis and Barr, Earl T. and Devanbu, Premkumar and Sutton, Charles},
-  journal = {ACM Computing Surveys},
-  year    = {2018},
-  volume  = {51},
-  number  = {4},
-  pages   = {1--37},
+  title     = {A Survey of Machine Learning for Big Code and Naturalness},
+  author    = {Allamanis, Miltiadis and Barr, Earl T. and Devanbu, Premkumar and Sutton, Charles},
+  journal   = {ACM Computing Surveys},
+  year      = {2018},
+  volume    = {51},
+  number    = {4},
+  pages     = {1--37},
   publisher = {ACM}
 }
 
-@article{hindle2012naturalness,
-  title   = {On the Naturalness of Software},
-  author  = {Hindle, Abram and Barr, Earl T. and Su, Zhendong and Gabel, Mark and Devanbu, Premkumar},
-  journal = {Proceedings of the 34th International Conference on Software Engineering (ICSE)},
-  year    = {2012},
-  pages   = {837--847},
+@inproceedings{hindle2012naturalness,
+  title     = {On the Naturalness of Software},
+  author    = {Hindle, Abram and Barr, Earl T. and Su, Zhendong and Gabel, Mark and Devanbu, Premkumar},
+  booktitle = {Proceedings of the 34th International Conference on Software Engineering (ICSE)},
+  year      = {2012},
+  pages     = {837--847},
   publisher = {IEEE}
 }
 
-@article{tufano2019deeplearning,
-  title   = {Deep Learning Similarities from Different Representations of Source Code},
-  author  = {Tufano, Michele and Others},
-  journal = {Proceedings of the 26th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER)},
-  year    = {2019},
+@inproceedings{tufano2019deeplearning,
+  title     = {Deep Learning Similarities from Different Representations of Source Code},
+  author    = {Tufano, Michele and et al.},
+  booktitle = {Proceedings of the 26th IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER)},
+  year      = {2019},
   publisher = {IEEE}
 }
 
-@article{vaswani2017attention,
-  title   = {Attention Is All You Need},
-  author  = {Vaswani, Ashish and Others},
-  journal = {Advances in Neural Information Processing Systems (NeurIPS)},
-  year    = {2017}
+@inproceedings{vaswani2017attention,
+  title     = {Attention Is All You Need},
+  author    = {Vaswani, Ashish and et al.},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year      = {2017}
 }
 
-@article{brown2020gpt3,
-  title   = {Language Models Are Few-Shot Learners},
-  author  = {Brown, Tom B. and Others},
-  journal = {Advances in Neural Information Processing Systems (NeurIPS)},
-  year    = {2020}
+@inproceedings{brown2020gpt3,
+  title     = {Language Models Are Few-Shot Learners},
+  author    = {Brown, Tom B. and et al.},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year      = {2020}
+}
+
+@inproceedings{jiang2023codereview,
+  title={AI-Assisted Code Review: A Systematic Evaluation},
+  author={Jiang, Yifan and others},
+  booktitle={Proceedings of the 45th International Conference on Software Engineering},
+  year={2023}
 }
